--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,39 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import 'tailwind.css';
+@import 'base.css'; /* порядок импорта не имеет значения (т.к. @layer) */
+@import 'components.css'; /* порядок импорта не имеет значения (т.к. @layer) */
+
+/*
+  Директива @import является SASS-подобной, т.к. рабоает в процессе сборки проекта - build time,
+  а не в процессе выполнения проекта - run time (см ссылки в tailwind.css). Т.е. после сборки проекта
+  файлы css не дробяться на несколько частей, а компилируються в один общий css файл. (см стили после сборки в 
+  папке .next -> static -> css, а также в консоли -> network)
+
+  Базовые (base.css) стили переопределяються стилями компонент (components.css)
+  стили компонент переопределяються стилями, написанными ниже. При этом,
+  т.к. в base.css/components.css мы использовали директиву @layer, то порядок импорта
+  данных файлов не имеет значения
+*/
+
+.index__TeamSwiper-container {
+  @apply h-571px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.index__TeamSwiper-container .swiper-slide {
+  @apply items-center flex;
 }
 
-* {
-  box-sizing: border-box;
+.index__TalkAboutUsSwiper-container .swiper-slide {
+  @apply pl-24;
+}
+
+.index__TalkAboutUs-swiper-pagination {
+  @apply flex items-center justify-center mt-12;
+}
+
+.index__TalkAboutUs-swiper-pagination .swiper-pagination-bullet {
+  @apply bg-my-rgba(255,0,0,0.3) focus:outline-none h-10.5px mr-10.5px opacity-100 outline-none w-10.5px;
+}
+
+.index__TalkAboutUs-swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  @apply bg-my-f00 h-14px w-14px;
 }
